fixing card spacing on smaller screens

--- a/client/src/components/MainFeed/MainFeed.css
+++ b/client/src/components/MainFeed/MainFeed.css
@@ -122,7 +122,11 @@
   }
 
   .cardSpacer {
-    margin: 150px;
+    margin: 180px;
+  }
+
+  .cardSpacer:last-child {
+    margin: 200px;
   }
 }
 @media only screen and (max-width: 500px) {
